--- a/tests/-FormEnhance.html
+++ b/tests/-FormEnhance.html
@@ -9,6 +9,10 @@
 <table id="suiteTable" cellpadding="1" cellspacing="1" border="1" class="selenium"><tbody>
 <tr><td><b>Test Suite</b></td></tr>
 <tr><td><a href="Form AutoFill.html">Form AutoFill</a></td></tr>
+<tr><td><a href="Form Auto AJAX Submit.html">Form Auto AJAX Submit</a></td></tr>
+<tr><td><a href="Form Auto Validation and Formatting.html">Form Auto Validation and Formatting</a></td></tr>
+<tr><td><a href="Custom StereoType.html">Custom StereoType</a></td></tr>
+<tr><td><a href="Custom App-level Validator.html">Custom App-level Validator</a></td></tr>
 </tbody></table>
 </body>
 </html>
