--- a/tests/Form AutoFill.html
+++ b/tests/Form AutoFill.html
@@ -12,6 +12,11 @@
 <tr><td rowspan="1" colspan="3">Form Auto Fill</td></tr>
 </thead><tbody>
 <tr>
+	<td>selectWindow</td>
+	<td>null</td>
+	<td></td>
+</tr>
+<tr>
 	<td>open</td>
 	<td>/decjtest/page/formEnhance/testFormEnhanceBasic.htm</td>
 	<td></td>
