Change CSS Load test case

--- a/tests/Load Hybrid CSS.html
+++ b/tests/Load Hybrid CSS.html
@@ -41,6 +41,11 @@
 	<td>id=visibility-Clue</td>
 	<td></td>
 </tr>
+<tr>
+	<td>verifyElementHeight</td>
+	<td>css=input.large</td>
+	<td>100</td>
+</tr>
 </tbody></table>
 </body>
 </html>
